subnets.tf
#creating public subnet
resource "aws_subnet" "public_subnet" {
  count                   = length(var.public_subnet_cidrs)
  vpc_id                  = aws_vpc.my_vpc.id
  cidr_block              = var.public_subnet_cidrs[count.index]
  map_public_ip_on_launch = true
  availability_zone       = data.aws_availability_zones.available.names[count.index]

  tags = {
    Name = "${var.vpc_name}-public-${count.index + 1}"
  }
  depends_on = [
    aws_vpc.my_vpc,
  ]
}

#creating private subnet
resource "aws_subnet" "private_subnet" {
  count             = length(var.private_subnet_cidrs)
     vpc_id            = aws_vpc.my_vpc.id
  cidr_block        = var.private_subnet_cidrs[count.index]
  availability_zone = data.aws_availability_zones.available.names[count.index]

  tags = {
    Name = "${var.vpc_name}-private-${count.index + 1}"
  }
  depends_on = [
    aws_vpc.my_vpc,
  ]
}
